@@ -127,7 +127,6 @@
     </table>
   </div>
   <footer>
-    <a href=</a>
   </footer>
   <script type='text/javascript' src='calculator.js'></script>
 </body>
