@@ -1,3 +1,8 @@
+2016-05-17
+
+Implemented Enhancements
+* Add output: Laser Comm Bit Rate Received in Array
+
 2016-05-16
 
 Implemented Enhancements
